webapp-v.yml
#persistent volumes practice test

apiVersion: v1
kind: Pod
metadata:
 # creationTimestamp: 2019-04-20T08:32:50Z
  name: webapp
  namespace: default
 # resourceVersion: "2483"
  #selfLink: /api/v1/namespaces/default/pods/webapp
  #uid: e1e78fa7-6346-11e9-9925-0242ac110021
spec:
  containers:
  - env:
    - name: LOG_HANDLERS
      value: file
    image: kodekloud/event-simulator
    imagePullPolicy: Always
    name: event-simulator
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-x2lv7
      readOnly: true
    - mountPath: /log
      name: data-volume
  dnsPolicy: ClusterFirst
  nodeName: node01
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-x2lv7
    secret:
      defaultMode: 420
      secretName: default-token-x2lv7
  - name: data-volume
    #hostPath:
        #path: /var/log/webapp
       # type: Directory
    persistentVolumeClaim:
       claimName: claim-log-1
    
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: 2019-04-20T08:32:50Z
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: 2019-04-20T08:32:57Z
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: null
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: 2019-04-20T08:32:50Z
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://6f1ee39cb2253d3a43420e5bd64ed8306be7fd35a14dd732f633cd2fc3d57135
    image: kodekloud/event-simulator:latest
    imageID: docker-pullable://kodekloud/event-simulator@sha256:1e3e9c72136bbc76c96dd98f29c04f298c3ae241c7d44e2bf70bcc209b030bf9
    lastState: {}
    name: event-simulator
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: 2019-04-20T08:32:57Z
  hostIP: 172.17.0.45
  phase: Running
  podIP: 10.32.0.2
  qosClass: BestEffort
  startTime: 2019-04-20T08:32:50Z
